<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_fragment_background">

    <data>

        <variable
            name="viewModel"
            type="com.ilkeryildirim.soccerleague.ui.screens.home.HomeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_x_large"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_discover"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/size_text_xxxxx_large"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dimen_xxxx_small"
                    android:text="@string/string_discover_description"
                    android:textColor="@color/color_text_subtitle"
                    android:textSize="@dimen/size_text_large"
                    tools:ignore="RtlSymmetry">

                </TextView>
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_x_large"
                        android:layout_marginTop="@dimen/dimen_xxxx_small"
                        android:layout_marginBottom="4dp"
                        app:cardCornerRadius="@dimen/dimen_small">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{()->viewModel.onFixtureFragmentDestination()}"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/dimen_xxxxx_large"
                                android:src="@drawable/baseline_sports_soccer_black_48dp"
                                app:tint="@color/color_text_title" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="24dp"
                                android:text="@string/string_fixture"
                                android:textColor="@color/color_text_title"
                                android:textSize="@dimen/size_text_xxx_large">

                            </TextView>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_x_large"
                        android:layout_marginTop="@dimen/dimen_xxxx_small"
                        android:layout_marginBottom="@dimen/dimen_xxxx_small"
                        app:cardCornerRadius="@dimen/dimen_small">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/dimen_xxxxx_large"
                                android:src="@drawable/baseline_sports_soccer_black_48dp"
                                app:tint="@color/color_text_title" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="@dimen/dimen_xxx_large"
                                android:text="@string/string_teams"
                                android:textColor="@color/color_text_title"
                                android:textSize="@dimen/size_text_xxx_large">

                            </TextView>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_x_large"
                        android:layout_marginTop="@dimen/dimen_xxxx_small"
                        android:layout_marginBottom="@dimen/dimen_xxxx_small"
                        app:cardCornerRadius="@dimen/dimen_small">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/dimen_xxxxx_large"
                                android:src="@drawable/baseline_sports_soccer_black_48dp"
                                app:tint="@color/color_text_title" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="@dimen/dimen_xxx_large"
                                android:text="@string/string_score_table"
                                android:textColor="@color/color_text_title"
                                android:textSize="@dimen/size_text_xxx_large" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_x_large"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_leaderboard"
                        android:textColor="@color/color_text_title"
                        android:textSize="@dimen/size_text_xxx_large"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_see_all"
                        android:textColor="@color/color_navigator_texts"
                        android:textSize="@dimen/size_text_large"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvLeaderBoard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_x_large"
                    android:layout_marginEnd="@dimen/dimen_x_large"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_x_large"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_today_match"
                        android:textColor="@color/color_text_title"
                        android:textSize="@dimen/size_text_xxx_large"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{()->viewModel.onFixtureFragmentDestination()}"
                        android:text="@string/string_see_all"
                        android:textColor="@color/color_navigator_texts"
                        android:textSize="@dimen/size_text_large"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTodaysMatches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_x_large"
                    android:layout_marginEnd="@dimen/dimen_x_large"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</layout>